// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render error common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="MuiFormControlLabel-root controlLabel"
        data-testid="common-switch"
      >
        <span
          class="MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary error MuiSwitchBase-checked MuiSwitch-checked"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                class="MuiSwitch-icon MuiSwitch-iconChecked error"
              />
              <input
                checked=""
                class="MuiSwitchBase-input"
                id=""
                type="checkbox"
                value=""
              />
            </span>
          </span>
          <span
            class="MuiSwitch-bar errorBar"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-body2 MuiFormControlLabel-label error"
        />
      </label>
      
    </div>
  </div>
</div>
`;

exports[`render primary common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="MuiFormControlLabel-root controlLabel"
        data-testid="common-switch"
      >
        <span
          class="MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary MuiSwitchBase-checked MuiSwitch-checked"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                class="MuiSwitch-icon MuiSwitch-iconChecked"
              />
              <input
                class="MuiSwitchBase-input"
                id=""
                type="checkbox"
                value="test"
              />
            </span>
          </span>
          <span
            class="MuiSwitch-bar"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-body2 MuiFormControlLabel-label"
        >
          Primary
        </span>
      </label>
      <p
        class="MuiFormHelperText-root switchHelperText"
      >
        test switch
      </p>
    </div>
  </div>
</div>
`;

exports[`render secondary common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="MuiFormControlLabel-root controlLabel"
        data-testid="common-switch"
      >
        <span
          class="MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary MuiSwitchBase-checked MuiSwitch-checked"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                class="MuiSwitch-icon MuiSwitch-iconChecked"
              />
              <input
                checked=""
                class="MuiSwitchBase-input"
                id=""
                type="checkbox"
                value=""
              />
            </span>
          </span>
          <span
            class="MuiSwitch-bar"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-body2 MuiFormControlLabel-label"
        />
      </label>
      
    </div>
  </div>
</div>
`;
